# financeiro

./: README.md  config.exemplo.yaml  iniciar.bat  pyproject.toml  requirements.txt
.github/workflows/: testes.yml
saida/: teste_conciliacao.xlsx  teste_dre.xlsx  teste_validacao.xlsx
src/financeiro/: __init__.py  cli.py  cnpj_checker.py  conciliacao.py  consolidador.py  menu.py  relatorios.py  utils.py  validador.py
src/financeiro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: gerar_fixtures.py  test_cnpj_checker.py  test_nf_duplicada.py  test_utils.py
tests/fixtures/: controle_interno.xlsx  dados_validacao.xlsx  extrato_banco.xlsx  lancamentos.xlsx
