[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financeiro"
version = "1.0.0"
description = "Sistema Financeiro Automatizado — CLI para conciliação, consolidação, relatórios e validação"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "openpyxl>=3.1",
    "typer>=0.15",
    "rich>=14.0",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "rapidfuzz>=3.12",
    "requests>=2.31",
]

[project.scripts]
financeiro = "financeiro.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
